--- a/views/stats.mustache
+++ b/views/stats.mustache
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Clement's Personal Stat Tracking App</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/styles.css" type="text/css">
   </head>
   <body>
     <h1>Clement's Personal Stat Tracking App</h1>
-    <h3>All Stats: {{allStats}}</h3>
+
+    <h3>Create a New Stat:</h3>
+    <form method="post">
+      <input type="text" name="inputStatName" placeholder="enter a stat name">
+      <br>
+      <input type="text" name="inputStatType" placeholder="enter a stat type">
+      <br>
+      <input type="text" name="inputStatNumber" placeholder="enter a stat value">
+      <br>
+      <input type="submit" name="inputSubmit" value="Stat Me!">
+      <br>
+    </form>
+
+    <h3>All Stats:</h3>
+      <ul class="allStats">
+        {{#allStats}}
+        <li>Name: <a href="/api/activities/{{name}}">{{name}}</a></li>
+        <li>Type: {{type}}</li>
+        <li>Stat: {{stat}}</li>
+        <br>
+        {{/allStats}}
+      </ul>
 
   </body>
 </html>
