stats data type changed to array, update field pushes to same

--- a/views/activity.mustache
+++ b/views/activity.mustache
@@ -6,13 +6,16 @@
     <link rel="stylesheet" href="/styles.css" type="text/css">
   </head>
   <body>
+    <nav>
+      <a href="/api/activities">Home</a>
+    </nav>
     <h3>{{#activity}}{{name}}{{/activity}} Stat Page</h3>
     {{#activity}}
     <ul class="allStats">
       <li>{{name}}</li>
       <li>{{type}}</li>
-      <li>{{stat}}</li>
-      <li><form method="post"><input id="updateBox" type="text" placeholder="update stat here"></form></li>
+      <li>{{stat}} </li>
+      <li><form method="post"><input name="updateBox" type="text" placeholder="update stat here"></form></li>
       {{/activity}}
     </ul>
   </body>
