--- a/views/stats.mustache
+++ b/views/stats.mustache
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/styles.css" type="text/css">
   </head>
   <body>
+    <nav>
+      <a href="/api/activities">Home</a>
+    </nav>
     <h1>Clement's Personal Stat Tracking App</h1>
 
     <h3>Create a New Stat:</h3>
