--- a/views/activity.mustache
+++ b/views/activity.mustache
@@ -14,7 +14,7 @@
     <ul class="allStats">
       <li>{{name}}</li>
       <li>{{type}}</li>
-      <li>{{stat}} </li>
+      <li>{{stat}} Created at: {{date}}</li>
       <li><form method="post"><input name="updateBox" type="text" placeholder="update stat here"></form></li>
       {{/activity}}
     </ul>
