add signup feature

--- a/views/activity.mustache
+++ b/views/activity.mustache
@@ -8,6 +8,9 @@
   <body>
     <nav>
       <a href="/api/activities">Home</a>
+      <a href="/login">Login</a>
+      <a href="/">Logout</a>
+      <a href="/signup">Sign Up</a>
     </nav>
     <h3>{{#activity}}{{name}}{{/activity}} Stat Page</h3>
     {{#activity}}
