--- a/views/stats.mustache
+++ b/views/stats.mustache
@@ -8,6 +8,9 @@
   <body>
     <nav>
       <a href="/api/activities">Home</a>
+      <a href="/login">Login</a>
+      <a href="/">Logout</a>
+      <a href="/signup">Sign Up</a>
     </nav>
     <h1>Clement's Personal Stat Tracking App</h1>
 
